# Interface_informer

./: CMakeLists.txt  README.md  interface_informer-config.cmake.in  main.cpp  printer.cpp  printer.hpp  switch_ns.hpp
src/app/: CMakeLists.txt  main.cpp
src/example/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  printer.cpp  printer.hpp  switch_ns.cpp
src/lib/include/informer/: interface_informer.hpp
