cmake_minimum_required(VERSION 3.25)
project(interface_informer
        VERSION 0.0.1
        LANGUAGES CXX
        HOMEPAGE_URL "https://github.com/khromenokroman/printer_interface"
)

configure_file(Version.in Version @ONLY)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(src/example)
add_subdirectory(src/lib)

set(CPACK_GENERATOR DEB)
set(CPACK_DEBIAN_FILE_NAME "DEB-DEFAULT")
set(CPACK_DEB_COMPONENT_INSTALL ON)

set(CPACK_DEBIAN_LIB_PACKAGE_NAME "lib${PROJECT_NAME}${PROJECT_VERSION_MAJOR}")
#set(CPACK_DEBIAN_PACKAGE_DEPENDS "libnl-3, libfmt11, libnl-route-3")
set(CPACK_DEBIAN_LIB_DESCRIPTION "Getting info interface")
set(CPACK_DEBIAN_LIB_MAINTAINER "roma55592@yandex.ru")
set(CPACK_DEBIAN_LIB_PACKAGE_SHLIBDEPS ON)

set(CPACK_DEBIAN_DEV_PACKAGE_NAME "lib${PROJECT_NAME}${PROJECT_VERSION_MAJOR}-dev")
set(CPACK_DEBIAN_DEV_PACKAGE_DEPENDS "lib${PROJECT_NAME}${PROJECT_VERSION_MAJOR} (= ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH})")
set(CPACK_DEBIAN_DEV_DESCRIPTION "Getting info interface")
set(CPACK_DEBIAN_DEV_MAINTAINER "roma55592@yandex.ru")
set(CPACK_DEBIAN_DEV_PACKAGE_SHLIBDEPS ON)

set(CPACK_DEBIAN_PACKAGE_MAINTAINER "roma55592@yandex.ru")
set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

include(CPack)